Add authenticate method in userService

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,6 @@
 "AllowedHosts": "*",
 "ConnectionStrings": {
   "ConnectionString": "Server=.\\;Database=Feed;Trusted_Connection=True;"
-  }
+  },
+  "Secret": "~~HIIAmS3CR3T~~!!"
 }
