Add logout button

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4",
     "reactstrap": "^8.4.1",
+    "recoil": "^0.4.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
