--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,13 @@
       }
     },
 "AllowedHosts": "*",
+"EmailConf": {
+  "From": "",
+  "SmtpServer": "",
+  "Port": 587,
+  "Username": "",
+  "Password": ""      
+},
 "ConnectionStrings": {
   "ConnectionString": "Server=.\\;Database=Feed;Trusted_Connection=True;"
   },
