Remove dependency to special port number in frontend

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,6 +1,7 @@
 {
   "name": "feed",
   "version": "0.1.0",
+  "proxy": "https://localhost:45654/",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
